<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/seabg2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:elevation="8dp"
        android:background="#B0CBFA">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:padding="20dp"
            android:id="@+id/backbtn"
            android:clickable="true"
            android:src="@drawable/arrow"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="35dp"
            android:src="@drawable/title"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="4mm"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/title_activity_post_expectedmsg"
        android:id="@+id/textView4"
        android:layout_weight="0.30"
        android:textColor="#ff37249a" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="142dp"
        android:layout_weight="0.40">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="124dp"
            android:layout_marginLeft="10dp"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="4mm"
                android:gravity="center"
                android:text="@string/item"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="4mm"
                android:gravity="center"
                android:text="@string/price"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="4mm"
                android:gravity="center"
                android:text="@string/date"
                android:id="@+id/textView5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="4mm"
                android:gravity="center"
                android:text="@string/category"
                android:id="@+id/textView3" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="4mm"
                android:id="@+id/edit_item"
                android:inputType="text" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="4mm"
                android:id="@+id/edit_price"
                android:inputType="numberDecimal" />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="3mm"
                    android:hint="@string/day_unit"
                    android:inputType="numberDecimal"
                    android:id="@+id/edit_day" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="4mm"
                    android:text="/"
                    android:id="@+id/textView6" />
                <EditText
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textSize="3mm"
                    android:hint="@string/month_unit"
                    android:inputType="numberDecimal"
                    android:id="@+id/edit_month" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="4mm"
                    android:text="/"
                    android:id="@+id/textView7" />
                <EditText
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="3mm"
                    android:hint="@string/year_unit"
                    android:inputType="numberDecimal"
                    android:id="@+id/edit_year" />

            </LinearLayout>

            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textSize="4mm"
                android:id="@+id/edt_category" />

        </LinearLayout>


    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btn_ok"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff310a8e"
        android:background="@null" />


</LinearLayout>