<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></RelativeLayout>

    <ImageView
        android:src="@drawable/setgoal"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#483D8B"
        android:contentDescription="@string/app_name"

        android:layout_weight="0.31" />

    <EditText
        android:id="@+id/setmoney"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:hint="@string/typem" />

    <EditText
        android:id="@+id/setnumber"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:hint="@string/typenumber" />


</LinearLayout>
