<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/seabg2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:elevation="8dp"
        android:background="#B0CBFA">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:padding="20dp"
            android:id="@+id/backbtn"
            android:clickable="true"
            android:src="@drawable/arrow"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="35dp"
            android:src="@drawable/title"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/alarmMode" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:gravity="left"
            android:layout_weight="0.3"
            android:id="@+id/alarmOn"
            android:textOn="@string/on"
            android:switchMinWidth="80dp"
            android:textOff="@string/off" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/vibration" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:gravity="left"
            android:layout_weight="0.3"
            android:id="@+id/alarmVibrate"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:switchMinWidth="80dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:weightSum="1"
        android:layout_weight="0.4">


        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:textSize="40sp"
            android:inputType="number"
            android:gravity="center"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/edit_hr"
            android:layout_weight="0.45" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/alarmmid"
            android:gravity="center_horizontal"
            android:layout_weight="0.1" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:textSize="40sp"
            android:inputType="number"
            android:gravity="center"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/edit_min"
            android:layout_weight="0.45" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btn_ok"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff310a8e"
        android:background="@null" />


</LinearLayout>